--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ a.menu {
     text-decoration: none;
 }
 
+a.newa {
+    color:black;
+    text-decoration: none;
+}
+
 .about-us {
     height: 792px;
     width: 100%;
@@ -203,6 +208,7 @@ h3 {
     width: 350px;
     height: 600px;
     background-color: darkgrey;
+    position: relative;
 }
 
 .news {
@@ -213,8 +219,10 @@ h3 {
 
 .rect {
     background-color: rgb(233, 233, 233);
-    height: 75px;
+    height: 125px;
     width: 350px;
+    position: absolute;
+    top: 475px;
 }
 
 .photo {
